# Simulacro_SO

./: .gitignore  CMakeLists.txt  Parte 1.md  especificacao.md  eventos.c  eventos.h  interface.c  interface.h  lista.c  lista.h  listaCircular.c  listaCircular.h  main.c  main.h  memoria.c  memoria.h  semaforo.c  semaforo.h  sintetico.c  sintetico.h  sintetico1.txt  sintetico2.txt  sintetico3.txt
Especificações/: Parte 1.md  Parte 2.md  Projeto.md
include/: cpu.h  disco.h  eventos.h  globals.h  interface.h  main.h  memoria.h  processo.h  semaforo.h  sintetico.h  syscalls.h  tela.h
src/: cpu.c  disco.c  eventos.c  globals.c  interface.c  main.c  memoria.c  processo.c  semaforo.c  sintetico.c  syscalls.c  tela.c
